--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -1,69 +1,7 @@
 <div>
   <div>
-    <h1>
-      Movie #<%= @the_movie.id %> details
-    </h1>
-
-    <div>
-      <div>
-        <a href="/movies">
-          Go back
-        </a>
-      </div>
-
-      <div>
-        <a href="/movies/<%= @the_movie.id %>" data-turbo-method="delete">
-          Delete movie
-        </a>
-      </div>
-    </div>
-
-    <dl>
-      <dt>
-        Title
-      </dt>
-      <dd>
-        <%= @the_movie.title %>
-      </dd>
-
-      <dt>
-        Description
-      </dt>
-      <dd>
-        <%= @the_movie.description %>
-      </dd>
-
-      <dt>
-        Released
-      </dt>
-      <dd>
-        <%= @the_movie.released %>
-      </dd>
-
-      <dt>
-        Created at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@the_movie.created_at) %> ago
-      </dd>
-
-      <dt>
-        Updated at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@the_movie.updated_at) %> ago
-      </dd>
-    </dl>
-  </div>
-</div>
-
-<hr>
-
-
-<div>
-  <div>
     <h2>
-      Edit movie
+      Update movie
     </h2>
 
     <form action="/movies/<%= @the_movie.id %>"  method="post" data-turbo="false">
@@ -99,5 +37,3 @@
     </form>
   </div>
 </div>
-
-<hr>
